--- a/openair/app/src/main/res/values/strings.xml
+++ b/openair/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">OPENAIR</string>
+    <string name="app_name">오픈에어</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -27,10 +27,4 @@
     </string>
     <string name="title_activity_login">로그인</string>
     <string name="title_activity_insert_data">등록</string>
-
-
-    <string name="fb_app_id">406611099975906</string>
-    <string name="account_kit_client_token">dcdb34af58c0ae5d2f38f3d69e1e1a46</string>
-    <string name="ak_login_protocol_scheme">akdcdb34af58c0ae5d2f38f3d69e1e1a46</string>
-
 </resources>
